# compiler

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  README.md  README.txt  apply_all.sh  apply_compatible.sh  appveyor.yml  build.sh  copy.sh  debug_info.patch  docker-compose.yaml  fix_triple_state_crash.pwn  history.txt  license.txt  line_length.patch  patch.py  patch.sh  readme.bbcode  readme.md  readme.txt  stringize.patch  stringize.pwn
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
3.2.3636/: pawn-3.2.3636.tgz
3.2.3664/: pawn-3.2.3664.package
3.3.4058/: pawn-3.3.4058.package
3.3.4127/: pawn-3.3.4127.package  pawn-3.3.4127.tgz
4.0.4548/: pawn-4.0.4548-pkg.tgz  pawn-4.0.4548.tgz
4.0.4733/: pawn-4.0.4733-pkg.tgz  pawn-4.0.4733.tgz
EXAMPLES/: capt.p  cards.p  comment.p  gtkcalc.p  hanoi.p  hello2.p  ones.p  rot13.p  rpn.p  set.p  strtok.inc  traffic.p  traffic2.p  weekday.p
INCLUDE/: core.inc  datagram.inc  default.inc  file.inc  float.inc  process.inc  string.inc
SOURCE/AMX/: amxcons.c  amxdbg.h  amxdgram.c  amxstring.c
SOURCE/AMX/examples/: power.c
SOURCE/AMX/pawnrun/: prun1.c  prun2.c  prun3.c  prun4.c  prun5.c  prun_jit.c  readme.txt
SOURCE/COMPILER/: libpawnc.def.borland  libpawnc.lbc  svnrev.h
SOURCE/LINUX/: binreloc.h  getch.c  getch.h  sclinux.h
SOURCE/amx/: amx.c  amxdbg.h  amxdgram.c
SOURCE/amx/examples/: logfile.cpp
SOURCE/amx/pawnrun/: prun5.c
SOURCE/compiler/: sc.h  sc2.c  sc3.c  svnrev.h
examples/: argument.p  c2f.p  chat.p  faculty.p  fib.p  gcd.p  hello.p  julian.p  queue.p  quine.p  randlist.p  readfile.p  rpnparse.inc  sieve.p  turtle.p  wcount.p
include/: amxdll.inc  args.inc  console.inc  core.inc  datagram.inc  file.inc  fixed.inc  process.inc  rational.inc  string.inc  time.inc
not_samp_compatible/: 32_bit_lines_in_debug_header.patch  AMX_amxdbg.h_32bit-lines-in-header.patch  AMX_amxdbg.h_new-magic.patch  NewDebugMagic.patch
patches/: debug_info.patch  fix_md_array_init.pwn  fix_triple_state_crash.pwn  stringize.pwn
samp_compatible/: COMPILER_sc.h_increase-max-line-length.patch  COMPILER_sc2.c_stringize-ops.patch  CompileTimeStringOps.patch  CompileTimeStringOps.patch.README  FixMDArrayInitialization.patch  TripleStateCrash.patch  TripleStateCrash.patch.pwn  compiler_sc1.c_md-array-fix.patch  stringize.patch
source/amx/: CMakeLists.txt  amx.c  amx.h  amxFile.rc  amxargs.c  amxargs.rc  amxaux.c  amxaux.h  amxcons.c  amxcore.c  amxdbg.c  amxdbg.h  amxdgram.c  amxfile.c  amxfloat.c  amxgc.c  amxprocess.c  amxstring.c  amxstring.rc  amxtime.c  amxtime.rc  fixed.c  float.c  minIni.c  minIni.h  osdefs.h  pawndbg.c  pawnrun.c  termwin.c
source/amx/examples/: logfile.cpp  power.c
source/amx/pawnrun/: prun1.c  prun2.c  prun3.c  prun4.c  prun5.c  prun_jit.c  readme.txt
source/compiler/: CMakeLists.txt  libpawnc.c  libpawnc.lbc  libpawnc.rc  lstring.c  lstring.h  memfile.c  memfile.h  pawncc.c  pawncc.def.borland  pawndisasm.c  pawnruns.c  sc.h  sc1.c  sc2.c  sc3.c  sc4.c  sc5.c  sc5.scp  sc6.c  sc7.c  sc7.scp  sci18n.c  sclist.c  scmemfil.c  scstate.c  scstub.c  scvars.c  svnrev.h  svnrev.h.in  version.h.in
source/compiler/codepage/: 10001.txt  10003.txt  10004.txt  10005.txt  10010.txt  10021.txt  10029.txt  1047.txt  1141.txt  1143.txt  1144.txt  1145.txt  1250.txt  1251.txt  1257.txt  1258.txt  1361.txt  20000.txt  20005.txt  20106.txt  20107.txt  20269.txt  20273.txt  20277.txt  20278.txt  20297.txt  20420.txt  20424.txt  20833.txt  20866.txt  20871.txt  20880.txt  20905.txt  20924.txt  21025.txt  21866.txt  28592.txt  28594.txt  28595.txt  28597.txt  (+1009 more)
source/compiler/hashmap/: LICENSE  hashmap.c  hashmap.h
source/compiler/hashtable/: hashtable.h  wrap_hashtable.c  wrap_hashtable.h
source/compiler/tests/: .gitignore  CMakeLists.txt  __addressof.pwn  __emit.inc  __emit_p1.pwn  __emit_p2.pwn  __emit_p3.pwn  __emit_p4.pwn  __emit_p5.pwn  __emit_p6.pwn  __emit_p7.pwn  __emit_pcode_check.pwn  __fallthrough.pwn  __fallthrough_pcode_check.pwn  __nameof_1.pwn  __nameof_2.pwn  __pragma.pwn  __pragma_pcode.pwn  __static_assert.pwn  __timestamp.pwn  anonymous_enum_tags.pwn  any_tag_feature_gh_264.pwn  array_defvalue.pwn  class_specifiers_p1.pwn  class_specifiers_p2.pwn  const_array_args_and_literals_gh_276.pwn  const_static.inc  const_static.pwn  constexpr_result_prop_gh_308.pwn  continue_enum.pwn  ctl_flow_statement_alt_syntax_removal_p1.pwn  ctl_flow_statement_alt_syntax_removal_p2.pwn  destructor_not_impl_gh_310.pwn  empty_symbol_name_indeterminate_array_size_gh_338.pwn  empty_warning_crash_gh_339.pwn  enum_increment.pwn  error_013_1.pwn  error_013_2.pwn  error_013_3.pwn  error_013_4.pwn  (+85 more)
source/linux/: binreloc.c  binreloc.h  getch.c  getch.h  sclinux.h
tests/: CMakeLists.txt
tests/compiler/: CMakeLists.txt  main.pwn
xml/: pawndoc.css  pawndoc.xsl
